--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ Assets/Plugins/Editor/JetBrains.meta
 .idea/.idea.MeshModifiers/.idea/workspace.xml
 .vs/MeshModifiers/v15/Server/sqlite3/db.lock
 .vs/MeshModifiers/v15/Server/sqlite3/storage.ide
+.vs/MeshModifiers/v15/Server/sqlite3/storage.ide-shm
+*.ide-wal
